A bit closer to getting it fixed
Either the playingBar album img not showing or the control buttons becomes out of order. So deleted two lines in style.css from #playingBar .content (Line no. 54). now the interface is a bit better. Back to normal :)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,8 +54,6 @@ body {
 #nowPlayingBar .content {
 	width: 100%;
     height: 57px;
-    display: flex;
-    display: table;
 }
 
 .playerControls .buttons {
